k8s/course-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-deployment
  labels:
    name: course-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: course
  template:
    metadata:
      labels:
        app: course
    spec:
      containers:
        - image: course-service
          name: course-main
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: '120m'
              memory: '120M'
            limits:
              cpu: '250m'
              memory: '250M'
          livenessProbe:
            httpGet:
              path: /health
              port: 5002
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 5002
            initialDelaySeconds: 10
            periodSeconds: 5
          ports:
            - containerPort: 5002
              name: http
