k8s/media-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-deployment
  labels:
    name: media-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: media
  template:
    metadata:
      labels:
        app: media
    spec:
      containers:
        - image: media-service
          name: media-main
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: '120m'
              memory: '120M'
            limits:
              cpu: '250m'
              memory: '250M'
          livenessProbe:
            httpGet:
              path: /health
              port: 5003
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 5003
            initialDelaySeconds: 10
            periodSeconds: 5
          ports:
            - containerPort: 5003
              name: http
