k8s/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - image: redis:7-alpine
          name: redis
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: '100m'
              memory: '100M'
            limits:
              cpu: '200m'
              memory: '200M'
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            timeoutSeconds: 5
          ports:
            - containerPort: 6379
              name: redis
