k8s/user-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  labels:
    name: user-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - image: user-service
          name: user-main
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: '120m'
              memory: '120M'
            limits:
              cpu: '250m'
              memory: '250M'
          livenessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 10
            periodSeconds: 5
          ports:
            - containerPort: 5001
              name: http
