k8s/chat-service.yml
kind: Service
apiVersion: v1
metadata:
  name: chat-service
spec:
  selector:
    app: chat
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5007
