k8s/coding-service.yml
kind: Service
apiVersion: v1
metadata:
  name: coding-service
spec:
  selector:
    app: coding
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5005
