k8s/course-service.yml
kind: Service
apiVersion: v1
metadata:
  name: course-service
spec:
  selector:
    app: course
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5002
