k8s/mcq-service.yml
kind: Service
apiVersion: v1
metadata:
  name: mcq-service
spec:
  selector:
    app: mcq
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5004
