k8s/media-service.yml
kind: Service
apiVersion: v1
metadata:
  name: media-service
spec:
  selector:
    app: media
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5003
