k8s/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    name: mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - image: mongo:7
          name: mongodb
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
              name: mongodb
          resources:
            requests:
              cpu: '150m'
              memory: '256M'
            limits:
              cpu: '500m'
              memory: '512M'
---
kind: Service
apiVersion: v1
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  type: ClusterIP
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
