k8s/project-review-service.yml
kind: Service
apiVersion: v1
metadata:
  name: project-review-service
spec:
  selector:
    app: project-review
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5006
