k8s/user-service.yml
kind: Service
apiVersion: v1
metadata:
  name: user-service
spec:
  selector:
    app: user
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5001
