k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: knowhere-ingress
  labels:
    app.kubernetes.io/name: knowhere-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: '/lms-raw-media'
            backend:
              service:
                name: minio
                port:
                  number: 9000
          - pathType: Prefix
            path: '/lms-transcoded-media'
            backend:
              service:
                name: minio
                port:
                  number: 9000
          - pathType: Prefix
            path: '/docs'
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - pathType: Prefix
            path: '/openapi.json'
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - pathType: Prefix
            path: '/api/auth'
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - pathType: Prefix
            path: '/api/v1/auth'
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - pathType: Prefix
            path: '/api/profile'
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - pathType: Prefix
            path: '/api/profiles'
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - pathType: Prefix
            path: '/api/competencies'
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - pathType: Prefix
            path: '/api/memberships'
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - pathType: Prefix
            path: '/api/course'
            backend:
              service:
                name: course-service
                port:
                  number: 80
          - pathType: Prefix
            path: '/api/courses'
            backend:
              service:
                name: course-service
                port:
                  number: 80
          - pathType: Prefix
            path: '/api/resources'
            backend:
              service:
                name: media-service
                port:
                  number: 80
          - pathType: Prefix
            path: '/api/questions'
            backend:
              service:
                name: mcq-service
                port:
                  number: 80
          - pathType: Prefix
            path: '/api/coding'
            backend:
              service:
                name: coding-service
                port:
                  number: 80
          - pathType: Prefix
            path: '/api/review'
            backend:
              service:
                name: project-review-service
                port:
                  number: 80
          - pathType: Prefix
            path: '/api/chat'
            backend:
              service:
                name: chat-service
                port:
                  number: 80
          - pathType: Prefix
            path: '/socket.io'
            backend:
              service:
                name: chat-service
                port:
                  number: 80
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
